skeplib/tests/fixtures/sema/valid/match_string_or.sk
fn main() -> Int {
  let s: String = "Y";
  match (s) {
    "y" | "Y" => { return 1; }
    _ => { return 0; }
  }
}
