skeplib/tests/fixtures/sema/invalid/export_unknown_name.sk
fn main() -> Int { return 0; }
export { nope };

